<resources>

    <string name="state">State</string>
    <string name="level">Level</string>


    <string name="game_check_result">Check</string>

    <!-- Main Menu -->
    <string name="main_menu_start_campaign_title">Campaign</string>
    <string name="main_menu_start_sprint_title">Sprint</string>

    <string name="main_menu_start_training_title">Training</string>

    <string name="main_menu_start_campaign_description">Develop your memory by going through different levels and tasks.</string>

    <string name="main_menu_start_sprint_description">Develop high-speed memory due to time constraints. Combine your indicators with other users.</string>
    <string name="main_menu_start_training_description">Develop your personal training and develop your memory even faster.</string>

    <string name="main_menu_advice">Read</string>
    <string name="main_menu_activate">Activate</string>


    <!-- Tutorial -->
    <string name="tutorial">Tutorial</string>

    <string name="tutorial_start_title">Welcome in training</string>
    <string name="tutorial_start_message">Click on the screen to proceed to the tasks.</string>

    <string name="tutorial_first_round_title">Round 1</string>
    <string name="tutorial_first_round_message">Remember the arrangement of the figures on the field. When the figures disappear, arrange them according to this arrangement.</string>

    <string name="tutorial_second_round_title">Round 2</string>
    <string name="tutorial_second_round_message">Figures appear on the field two consecutive times. When the shapes disappear, arrange them to fit both locations.\n</string>

    <string name="tutorial_third_round_title">Round 3</string>
    <string name="tutorial_third_round_message">Figures appear on the field two consecutive times. When the shapes disappear, arrange them according to the location number indicated on the screen.</string>

    <!-- Training -->
    <string name="training">Training</string>

    <string name="training_main_round_description">Selected rounds</string>
    <string name="training_board_settings_description">Set the board size</string>
    <string name="training_round_settings_description">Select the desired rounds</string>

    <string name="training_items_settings_items_count">Items count</string>
    <string name="training_items_settings_item_types_count">Item types count</string>

    <string name="training_start">Start</string>
    <string name="training_save">Save</string>
    <string name="training_cancel">Cancel</string>
    <string name="training_next">Next</string>
    <string name="training_previous">Previous</string>


    <!-- Rating Game -->
    <string name="rating_game_stage">Stage %1$d</string>


    <!-- Premium Dialog -->
    <string name="premium_dialog_title">Premium</string>

    <!-- Tutorial Dialog -->
    <string name="tutorial_dialog_title">Tutorial</string>
    <string name="tutorial_dialog_message">Congratulations. You have been trained. In the event of difficulties with the passage of any level or job, use the training mode.</string>


    <!-- Pause Dialog -->
    <string name="pause_dialog_title">Pause</string>
    <string name="pause_dialog_message">Your current progress has been saved. Please choose the next action&#8230;</string>


    <!-- Result Dialog -->
    <string name="result_dialog_title">Your result</string>

    <string name="game_round_1_title">Round 1</string>
    <string name="game_round_2_title">Round 2</string>
    <string name="game_round_3_title">Round 3</string>

    <string name="game_round_1_description">Display the location of the shapes</string>
    <string name="game_round_2_description">Align both locations</string>
    <string name="game_round_3_description">Display one location</string>


    <!-- Rate app dialog -->
    <string name="rate_app_dialog_title">Rate the app</string>
    <string name="rate_app_dialog_message">Hello, if you liked our application and you are interested in its development, spend a minute of your time to leave your assessment and feedback.</string>
    <string name="rate_app_dialog_dont_show_again">No thanks</string>
    <string name="rate_app_dialog_remind_me_later">Remind me later</string>
    <string name="rate_app_dialog_rate_now">Rate now</string>
    <string name="tutorial_dialog_button_text">Go to the levels</string>
    <string name="purchase_title">Get premium access</string>
    <string name="main_menu_play">Play</string>
    <string name="training_round_2_title">Round 2</string>
    <string name="training_round_3_title">Round 3</string>
    <string name="training_round_3_description">The figure appears on the screen 2 times with a time interval. After they disappear, display the selected location (the location number will appear on the screen)</string>
    <string name="training_round_2_description">The figure will appear on the screen 2 times with an interval in time. After they disappear, display the general layout, aligning the position of the figures at the first and second appearance.</string>
    <string name="training_round_1_description">The figure will appear on the screen. Remember their location. After they disappear, display the location of these figures on the field.</string>
    <string name="training_round_1_title">Round 1</string>

</resources>
