<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"

        android:paddingTop="16dp"
        android:paddingBottom="16dp"

        android:layout_marginBottom="16dp"

        android:background="?attr/colorPrimary"

        android:gravity="center_horizontal"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"

            android:text="@string/tutorial_dialog_title"
            android:textSize="24sp"
            android:textColor="@color/header_text_color"

            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:textSize="14sp"

        android:text="@string/tutorial_dialog_message"
        android:textColor="@color/dialog_message_text_color"
        android:textStyle="italic"

        android:paddingLeft="24dp"
        android:paddingRight="24dp"

        android:gravity="center_horizontal"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"

        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"

        android:gravity="center_horizontal"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tutorial_dialog_check_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"

            android:layout_weight="1"
            android:gravity="center"

            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginEnd="36dp"

            android:paddingTop="12dp"
            android:paddingBottom="12dp"

            android:text = "@string/tutorial_dialog_button_text"
            android:textColor="@android:color/white"
            android:textSize="17sp"

            android:background="@drawable/tutorial_dialog_background_shape" />

    </LinearLayout>

</LinearLayout>