<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"

    android:background="@color/background_color"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.greenkeycompany.librain.training.fragment.TrainingRoundFragment">

    <FrameLayout
        android:background="?attr/colorPrimary"

        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"

        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:orientation="horizontal"

            android:gravity="center"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/header_title_text_view"

                android:text="@string/training"
                android:textColor="@color/header_text_color"

                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"

                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:text="@string/training_round_settings_description"
        android:textColor="@color/main_card_text_color"
        android:textSize="16sp"

        android:paddingTop="24dp"
        android:paddingBottom="8dp"

        android:gravity="center_horizontal"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"

        android:gravity="center_vertical"

        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:id="@+id/training_first_round_card_view"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"

            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"

            card_view:cardBackgroundColor="@color/main_card_background_color"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"

                android:paddingRight="16dp"
                android:paddingStart="16dp">

                <CheckBox
                    android:id="@+id/training_first_round_check_box"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"

                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="Раунд 1"
                            android:textColor="@color/main_card_text_color"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"

                        android:layout_height="1dp"
                        android:background="@color/main_card_line_color" />

                    <TextView
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/main_menu_start_campaign_description"

                        android:textColor="@color/main_card_text_color"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/training_second_round_card_view"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"

            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"

            card_view:cardBackgroundColor="@color/main_card_background_color"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"

                android:paddingRight="16dp"
                android:paddingStart="16dp">

                <CheckBox
                    android:id="@+id/training_second_round_check_box"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"

                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="Раунд 2"
                            android:textColor="@color/main_card_text_color"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"

                        android:layout_height="1dp"
                        android:background="@color/main_card_line_color" />

                    <TextView
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/main_menu_start_campaign_description"

                        android:textColor="@color/main_card_text_color"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/training_third_round_card_view"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"

            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"

            card_view:cardBackgroundColor="@color/main_card_background_color"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"

                android:paddingRight="16dp"
                android:paddingStart="16dp">

                <CheckBox
                    android:id="@+id/training_third_round_check_box"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"

                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="Раунд 3"
                            android:textColor="@color/main_card_text_color"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"

                        android:layout_height="1dp"
                        android:background="@color/main_card_line_color" />

                    <TextView
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/main_menu_start_campaign_description"

                        android:textColor="@color/main_card_text_color"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"

        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="80dp">

        <Button
            android:id="@+id/training_previous_button"


            android:text="@string/training_previous"
            android:textColor="@color/green_button_text_color"

            android:theme="@style/GreenButton"

            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"

            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/training_next_button"

            android:text="@string/training_save"
            android:textColor="@color/green_button_text_color"

            android:theme="@style/GreenButton"

            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"

            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
